#121 Add ability to edit role and delete user by admin
